test/expected/explain_cast_a3a5a7i.out
explain (int[3][5][7])x
        ^
9: error: arithmetic or pointer type expected
